# PowerOf10

./: .coverage  .gitignore  README.md  config.yml  main.py  parkrun.ipynb  pyproject.toml
notebooks/: parkrun.py
power_of_10/: __init__.py  config.py  html_parser.py  po10_exceptions.py  power_of_10.py  string_utils.py
power_of_10/models/: athlete.py  event.py
src/power_of_10/: __init__.py  html_parser.py  power_of_10.py  string_utils.py
src/power_of_10/models/: __init__.py  athlete.py  event.py
tests/: conftest.py
tests/athlete/: test_get_athlete_by_id.py  test_get_athlete_name.py
tests/event/: test_event.py
tests/mock_data/athlete_profiles/: 1114055.html  no_athlete_details.html  no_athlete_name.html  not_found.html
tests/string_utils/: test_parse_event_code.py
